--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="NoteSy"
-      content="All your notes. Oragnized. Effortless. Inspiration strikes everywhere. Notesy lets you capture your ideas across any device."
+      content="All your notes. Organized. Effortless. Inspiration strikes everywhere. Notesy lets you capture your ideas across any device."
     />
 
     <meta name="viewport" content="initial-scale=1, width=device-width" />
